[tool.poetry]
name = "betting-alerts"
version = "0.1.0"
description = ""
authors = ["Ivan <firesaspent@gmail.com>"]
readme = "README.md"
packages = [{include = "betting_alerts"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.8.2"
beautifulsoup4 = "^4.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
